# erlusb

./: .gitignore  .gitmodules  AUTHORS  GNUmakefile.in  Makefile.am  NEWS  README  README.rst  TODO  configure.ac  erlusb.css  index.html
build-helpers/: package-version  package-version.mk
erlusb/: Makefile.am
erlusb/c_src/: driver-libusb1.c  erlusb-log.c  erlusb-manager.c  gps-comm-test.c  old_driver-libusb1.c  old_driver.h  old_erlusb-main.c
erlusb/include/: erlusb.hrl
erlusb/src/: erlusb.app.in  erlusb.erl  erlusb_app.erl  erlusb_internal.hrl  erlusb_sup.erl  old_erlusb.erl  old_garmin.erl
erlusb/test/: lsusb.erl  test-libusb1.cmds  test-libusb1.sh  test-lsusb.sh  test-manager.sh
src/: Makefile-files  driver-libusb0.c  driver-libusb1.c  driver.h  erlusb-ei.c  erlusb-ei.h  erlusb-log.c  erlusb-log.h  erlusb-main.c  erlusb.c  erlusb.erl  erlusb.hrl  garmin.erl  gps-comm-test.c  test-erlusb.cmds  test-erlusb.sh  test-libusb0.cmds  test-libusb0.sh  test-libusb1.sh
test/erl-1/: Makefile-files  complex2.erl  test-erl.c  test-erl.cmds  test-erl.sh
test/erl-2/: Makefile-files  complex22.erl  test-erl.c  test-erl.cmds  test-erl.sh
test/usb/: Makefile-files  test-usb.c
tests/: Makefile.am  atlocal.in  blah.at  blubb.at  erlusb-foo.at  local.at
