# tests/Makefile.am - handle the autotest based testsuite

EXTRA_DIST =
DISTCLEANFILES =

TESTCASES =
TESTCASES += blubb.at
TESTCASES += blah.at
TESTCASES += erlusb-foo.at
# Add more testcases here

EXTRA_DIST += $(TESTCASES)

TESTSUITE = testsuite

EXTRA_DIST += atlocal.in local.at
DISTCLEANFILES += atconfig atlocal

DISTCLEANFILES += \
	testsuite.log \
	testsuite.dir/at-stderr \
	testsuite.dir/at-stdout \
	testsuite.dir/at-check-line \
	testsuite.dir/at-status

check-local: atconfig atlocal $(TESTSUITE)
	if test -f "$(srcdir)/$(TESTSUITE)"; then dir="$(srcdir)"; else dir="."; fi; \
	$(SHELL) "$${dir}/$(TESTSUITE)" AUTOTEST_PATH=`cd $(top_builddir) > /dev/null && pwd` \
		$(TESTSUITEFLAGS)

installcheck-local: atconfig atlocal $(TESTSUITE)
	if test -f "$(srcdir)/$(TESTSUITE)"; then dir="$(srcdir)"; else dir="."; fi; \
	$(SHELL) "$${dir}/$(TESTSUITE)" AUTOTEST_PATH='$(bindir)' \
		$(TESTSUITEFLAGS)

clean-local:
	test ! -f '$(TESTSUITE)' || \
		$(SHELL) '$(TESTSUITE)' --clean

# Note about the location of testsuite.at, $(TESTSUITE), and package.m4:
# We locate these files in the $(srcdir), because
#  a) They are shipped in the source tarball.
#  b) If they are created in $(builddir), they will need to be removed on
#     "make clean" or "make distclean". Re-generation requires tools a
#     normal system does not need to have.
#  c) They do not change depending on any configure run, they only change
#     depending on configure.ac or tests/Makefile.am updates - and those
#     require special build tools to handle anyway. Thus, a normal build
#     will not touch these files at all and just leave the filese from
#     upstream in place.

# testsuite.at depends on Makefile.am to make sure that changes in the
# list of TESTCASES are reflected in testsuite.at. We do not depend on
# Makefile, as Makefile is re-created on every ./configure run, and that
# does not imply an addition to TESTCASES.
EXTRA_DIST += $(srcdir)/testsuite.at
$(srcdir)/testsuite.at: $(TESTCASES) Makefile.am
	{ \
		echo "dnl testsuite.at autogenerated from tests/Makefile.am"; \
		for tc in $(TESTCASES); do \
			echo "m4_include([$${tc}])"; \
		done; \
	} > $(srcdir)/testsuite.at

# FIXME: Hack to handle unset AUTOM4TE variable
EXTRA_DIST += $(srcdir)/$(TESTSUITE)
$(srcdir)/$(TESTSUITE): $(srcdir)/testsuite.at $(srcdir)/local.at $(srcdir)/package.m4
	AUTOM4TE="$(AUTOM4TE)"; \
	if test "x$${AUTOM4TE}" = "x"; then AUTOM4TE="autom4te"; fi; \
	$${AUTOM4TE} --language=autotest -I '$(srcdir)' -o $(TESTSUITE).tmp $(srcdir)/testsuite.at
	mv $(TESTSUITE).tmp $(srcdir)/$(TESTSUITE)

EXTRA_DIST += $(srcdir)/package.m4
$(srcdir)/package.m4: $(top_srcdir)/configure.ac
	{                                      \
		echo '# Signature of the current package (generated by tests/Makefile.am).'; \
		echo 'm4_define([AT_PACKAGE_NAME],      [@PACKAGE_NAME@])'; \
		echo 'm4_define([AT_PACKAGE_TARNAME],   [@PACKAGE_TARNAME@])'; \
		echo 'm4_define([AT_PACKAGE_VERSION],   [@PACKAGE_VERSION@])'; \
		echo 'm4_define([AT_PACKAGE_STRING],    [@PACKAGE_STRING@])'; \
		echo 'm4_define([AT_PACKAGE_BUGREPORT], [@PACKAGE_BUGREPORT@])'; \
	} > $(srcdir)/package.m4

# End of tests/Makefile.am.

